# gpt_app_learn

./: README.md  pyproject.toml
notebooks/: Untitled.ipynb
src/gpt_app_learn/utils/: page.py  pdf.py  qdrant.py  url.py  youtube.py
tests/: 01_00_simple_chatgpt.py  01_chatgpt_like_app.py  02_chatgpt_like_app.py  03_summary_url_content.py  04_summary_youtube_video.py  05_summary_long_youtube_video.py  06_pdf_upload.py  07_pdf_qa.py
